--- a/.github/workflows/repo.yml
+++ b/.github/workflows/repo.yml
@@ -11,5 +11,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        run: echo ${{ github.event.inputs.repo_name }}
+        run: echo "${{ github.event.inputs.repo_name }}"
         # uses: actions/checkout@v3
