--- a/.github/workflows/repo.yml
+++ b/.github/workflows/repo.yml
@@ -1,14 +1,15 @@
 name: Create Repo
 on: 
   workflow_dispatch:
-    inputs:
-      repo-name: 
-        description: 'Name of the repository to be created'
-        required: true
-        default: ''
+    # inputs:
+    #   repo-name: 
+    #     description: 'Name of the repository to be created'
+    #     required: true
+    #     default: ''
 
 env:
-  GH_REPO: ${{ github.event.inputs.repo_name }}
+  # GH_REPO: ${{ github.event.inputs.repo_name }}
+  GH_REPO: "repo-name"
   
 jobs:
   create-repo:
