--- a/.github/workflows/repo.yml
+++ b/.github/workflows/repo.yml
@@ -8,12 +8,13 @@ on:
         type: string
 
 env:
-  GH_REPO: "${{ github.inputs.repo_name }}"
-#   # GH_REPO: "repo-name"
+  GH_REPO: ${{ github.inputs.repo_name }}
+   # GH_REPO: "repo-name"
   
 jobs:
   create-repo:
     runs-on: ubuntu-latest
     steps:
       - name: Create repo
-        run: echo "$GH_REPO"
+        run: |
+          echo "GH_REPO: $GH_REPO"
